# NBox

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  TF1_SOURCE_SUPPORT.md  check_hits.C  nbox.cc  quick_check.C  test_diagnostic.mac  test_phase4.mac  vis.mac
.serena/: project.yml
.serena/memories/: code_style_conventions.md  neutron_source_specification.md  phase1_configmanager_complete.md  phase2_output_enhancement_complete.md  phase3_detector_id_complete.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
archive/source/: create_thermal_source.C
archive/test_scripts/: analyze_thermal.C  check_output.C  test.mac  test_cf252.mac  test_phase5.mac  test_thermal.mac
docs/: ANALYSIS.md  API.md  CONFIGURATION.md  PHYSICS.md  TIPS.md
docs/optimization/: .gitignore  01_specification.md  02_implementation_plan.md  README.md
docs/optimization/phase1_fluxmap/: README.md
docs/optimization/phase1_fluxmap/configs/: run_100keV.mac  run_10MeV.mac  run_10keV.mac  run_1MeV.mac  run_1keV.mac  run_5MeV.mac
docs/optimization/phase1_fluxmap/sample/: README.md  analyze_flux.C  geometry.json  run_10MeV.mac  run_1MeV.mac  run_thermal.mac
docs/optimization/phase1_fluxmap/scripts/: analyze_flux.C  analyze_flux.py  analyze_flux_root.py  compare_energies.py  run_all_energies.sh  run_simulation.sh
docs/optimization/phase2_bayesian/: README.md
docs/optimization/phase2_bayesian/sample/: README.md  run_1MeV.mac
docs/optimization/phase2_bayesian/scripts/: bayesian_optimizer.py  bayesian_optimizer_constrained.py  geometry_generator.py  run_nbox.py  test_bayesian_optimizer.py  test_geometry_generator.py  test_run_nbox.py  visualize_results.py
docs/optimization/phase3_genetic/: README.md  genetic_optimizer.py  test_genetic_optimizer.py
docs/optimization/phase3_genetic/sample/: README.md  detector.json  run_10MeV.mac
example/: TUTORIAL.md  analyze_efficiency.C  compare_detectors.C  create_AmBe_source.C  create_cf252_source.C  create_thermal_source.C  eligant_tn_detector.json  eligant_tn_detector_paper.json  eligant_tn_geometry.json  eligant_tn_geometry_paper.json  eligant_tn_test.mac  simple_reader.cpp
include/: ActionInitialization.hh  ConfigManager.hh  DetectorConstruction.hh  EventAction.hh  FluxSteppingAction.hh  NBoxConstants.hh  NBoxHit.hh  NBoxSD.hh  PrimaryGeneratorAction.hh  RunAction.hh
src/: ActionInitialization.cc  ConfigManager.cc  DetectorConstruction.cc  EventAction.cc  FluxSteppingAction.cc  NBoxHit.cc  NBoxSD.cc  PrimaryGeneratorAction.cc  RunAction.cc
test/: CHANGES.md  CMakeLists.txt  QUICKSTART.md  README.md  TDD_RESULTS.md
test/fixtures/: create_test_source.C  test_detector.json  test_geometry.json
test/fixtures/invalid/: missing_detectors.json
test/helpers/: test_helpers.cc  test_helpers.hh
test/unit/: test_config_manager.cc
